@@ -3,7 +3,7 @@ Section: non-free/kernel
 Priority: optional
 Maintainer: Debian Bluetooth Maintainers <team+pkg-bluetooth@tracker.debian.org>
 Uploaders: Filippo Giunchedi <filippo@debian.org>, Nobuhiro Iwamatsu <iwamatsu@debian.org>
-Build-Depends: debhelper (>= 11), autotools-dev, cdbs
+Build-Depends: debhelper (>= 11), autotools-dev
 Standards-Version: 4.1.4
 Vcs-Git: https://salsa.debian.org/bluetooth-team/bluez-firmware.git
 Vcs-Browser: https://salsa.debian.org/bluetooth-team/bluez-firmware
